--- a/Day14/NaverBox.html
+++ b/Day14/NaverBox.html
@@ -119,13 +119,13 @@
         <a href="#" class="seemore"></a>
         <div class="seemoreside">
           <div class="seemoresidebegin">
-            <a href="#" class="seemoresideall">서비스 전체보기</a>
-            <a href="#" class="seemoresideconfig">메뉴설정</a>
+            <a href="#" class="seemoresideall hoverborder">서비스 전체보기</a>
+            <a href="#" class="seemoresideconfig hoverborder">메뉴설정</a>
           </div>
           <div class="seemoresidehidden">
-            <a href="#" class="seeconfigreset">초기화</a>
-            <a href="#" class="seeconfigconfirm">확인</a>
-            <a href="#" class="seeconfigcancel">취소</a>
+            <a href="#" class="seeconfigreset hoverborder"><span class="reseticon"></span>초기화</a>
+            <a href="#" class="seeconfigconfirm hoverborder">확인</a>
+            <a href="#" class="seeconfigcancel hoverborder">취소</a>
           </div>
           <a href="#" class="seemoresideclose">
             <span class="seemoresidecloseicon"></span>
@@ -253,26 +253,28 @@
   <div id="outerbody">
     <div class="seemoremenuback"></div>
     <div class="seemoremenu">
-      <div>
+      <div class="seemoremenusub">
+        <h3>ㄱ-ㄷ</h3>
+        <ul class="addmenu">
+          <li><input type="checkbox" name="seealram" id="seehousehold" class="seeradio" value="invhousehold">가게부</li>
+          <li><input type="checkbox" name="seemovie" id="seegrapolio" class="seeradio" value="invgrapolio">그라폴리오</li>
+          <li><input type="checkbox" name="seeaudioclip" id="seeweather" class="seeradio" value="invweather">날씨</li>
+          <li><input type="checkbox" name="seeoffice" id="seenreservation" class="seeradio" value="invnreservation">네이버 예약</li>
+          <li><input type="checkbox" name="seewebfiction" id="seencloud" class="seeradio" value="invncloud">네이버 클라우드</li>
+          <li><input type="checkbox" name="seecar" id="seenpost" class="seeradio" value="invnpost">네이버 포스트</li>
+          <li><input type="checkbox" name="seeadress" id="seenews" class="seeradio" value="invnews">뉴스</li>
+          <li><input type="checkbox" name="seeadress" id="seedatawrap" class="seeradio" value="invdatawrap">데이터랩</li>
+        </ul>
+      </div>
+      <div class="seemoremenusub">
+        <h3>ㅇ-ㅈ</h3>
         <ul class="addmenu">
           <li><input type="checkbox" name="seealram" id="seealram" class="seeradio" value="invalram">알림</li>
-        </ul>
-        <ul class="addmenu">
           <li><input type="checkbox" name="seemovie" id="seemovie" class="seeradio" value="invmovie">영화</li>
-        </ul>
-        <ul class="addmenu">
           <li><input type="checkbox" name="seeaudioclip" id="seeaudioclip" class="seeradio" value="invaudioclip">오디오클립</li>
-        </ul>
-        <ul class="addmenu">
           <li><input type="checkbox" name="seeoffice" id="seeoffice" class="seeradio" value="invoffice">오피스</li>
-        </ul>
-        <ul class="addmenu">
           <li><input type="checkbox" name="seewebfiction" id="seewebfiction" class="seeradio" value="invwebfiction">웹소설</li>
-        </ul>
-        <ul class="addmenu">
           <li><input type="checkbox" name="seecar" id="seecar" class="seeradio" value="invcar">자동차</li>
-        </ul>
-        <ul class="addmenu">
           <li><input type="checkbox" name="seeadress" id="seeadress" class="seeradio" value="invadress">주소록</li>
         </ul>
       </div>
