네이버 기능 구현하기 5

--- a/Day14/NaverBox.html
+++ b/Day14/NaverBox.html
@@ -64,54 +64,54 @@
       <div id="lowertopdetail">
         <ul class="menu" id="menugreen">
           <li class="list listfirst">
-            <a href="#" class="mail"></a>
+            <a href="#" class="invmail"></a>
           </li>
           <li class="list">
-            <a href="#" class="cafe"></a>
+            <a href="#" class="invcafe"></a>
           </li>
           <li class="list">
-            <a href="#" class="blog"></a>
+            <a href="#" class="invblog"></a>
           </li>
           <li class="list">
-            <a href="#" class="kin"></a>
+            <a href="#" class="invkin"></a>
           </li>
           <li class="list">
-            <a href="#" class="shopping"></a>
+            <a href="#" class="invshopping"></a>
           </li>
           <li class="list">
-            <a href="#" class="pay"></a>
+            <a href="#" class="invpay"></a>
           </li>
           <li class="list">
-            <a href="#" class="tv"></a>
+            <a href="#" class="invtv"></a>
           </li>
         </ul>
         <ul class="menu" id="menublack">
           <li class="list listfirst">
-            <a href="#" class="dic"></a>
+            <a href="#" class="invdic"></a>
           </li>
           <li class="list">
-            <a href="#" class="news"></a>
+            <a href="#" class="invnews"></a>
           </li>
           <li class="list">
-            <a href="#" class="stock"></a>
+            <a href="#" class="invstock"></a>
           </li>
           <li class="list">
-            <a href="#" class="land"></a>
+            <a href="#" class="invland"></a>
           </li>
           <li class="list">
-            <a href="#" class="map"></a>
+            <a href="#" class="invmap"></a>
           </li>
           <li class="list">
-            <a href="#" class="movie"></a>
+            <a href="#" class="invmovie"></a>
           </li>
           <li class="list">
-            <a href="#" class="music"></a>
+            <a href="#" class="invmusic"></a>
           </li>
           <li class="list">
-            <a href="#" class="book"></a>
+            <a href="#" class="invbook"></a>
           </li>
           <li class="list">
-            <a href="#" class="webtoon"></a>
+            <a href="#" class="invwebtoon"></a>
           </li>
           <div class="seeconfig"></div>
         </ul>
@@ -256,26 +256,73 @@
       <div class="seemoremenusub">
         <h3>ㄱ-ㄷ</h3>
         <ul class="addmenu">
-          <li><input type="checkbox" name="seealram" id="seehousehold" class="seeradio" value="invhousehold">가게부</li>
-          <li><input type="checkbox" name="seemovie" id="seegrapolio" class="seeradio" value="invgrapolio">그라폴리오</li>
-          <li><input type="checkbox" name="seeaudioclip" id="seeweather" class="seeradio" value="invweather">날씨</li>
-          <li><input type="checkbox" name="seeoffice" id="seenreservation" class="seeradio" value="invnreservation">네이버 예약</li>
-          <li><input type="checkbox" name="seewebfiction" id="seencloud" class="seeradio" value="invncloud">네이버 클라우드</li>
-          <li><input type="checkbox" name="seecar" id="seenpost" class="seeradio" value="invnpost">네이버 포스트</li>
-          <li><input type="checkbox" name="seeadress" id="seenews" class="seeradio" value="invnews">뉴스</li>
-          <li><input type="checkbox" name="seeadress" id="seedatawrap" class="seeradio" value="invdatawrap">데이터랩</li>
+          <li><input type="checkbox" class="seeradio" value="invhousehold">가게부</li>
+          <li><input type="checkbox" class="seeradio" value="invgrapolio">그라폴리오</li>
+          <li><input type="checkbox" class="seeradio" value="invweather">날씨</li>
+          <li><input type="checkbox" class="seeradio" value="invnreservation">네이버 예약</li>
+          <li><input type="checkbox" class="seeradio" value="invncloud">네이버 클라우드</li>
+          <li><input type="checkbox" class="seeradio" value="invnpost">네이버 포스트</li>
+          <li><input type="checkbox" class="seeradio" value="invnews">뉴스</li>
+          <li><input type="checkbox" class="seeradio" value="invdatawrap">데이터랩</li>
+        </ul>
+      </div>
+      <div class="seemoremenusub">
+        <h3>ㄹ-ㅅ</h3>
+        <ul class="addmenu">
+          <li><input type="checkbox" class="seeradio" value="invline">라인</li>
+          <li><input type="checkbox" class="seeradio" value="invwebtoon">만화/웹툰</li>
+          <li><input type="checkbox" class="seeradio" value="invmemo">메모</li>
+          <li><input type="checkbox" class="seeradio" value="invmusic">뮤직</li>
+          <li><input type="checkbox" class="seeradio" value="invband">밴드</li>
+          <li><input type="checkbox" class="seeradio" value="invland">부동산</li>
+          <li><input type="checkbox" class="seeradio" value="invbookmark">북마크</li>
+          <li><input type="checkbox" class="seeradio" value="invsoftware">소프트웨어</li>
+          <li><input type="checkbox" class="seeradio" value="invsports">스포츠</li>
         </ul>
       </div>
       <div class="seemoremenusub">
         <h3>ㅇ-ㅈ</h3>
         <ul class="addmenu">
-          <li><input type="checkbox" name="seealram" id="seealram" class="seeradio" value="invalram">알림</li>
-          <li><input type="checkbox" name="seemovie" id="seemovie" class="seeradio" value="invmovie">영화</li>
-          <li><input type="checkbox" name="seeaudioclip" id="seeaudioclip" class="seeradio" value="invaudioclip">오디오클립</li>
-          <li><input type="checkbox" name="seeoffice" id="seeoffice" class="seeradio" value="invoffice">오피스</li>
-          <li><input type="checkbox" name="seewebfiction" id="seewebfiction" class="seeradio" value="invwebfiction">웹소설</li>
-          <li><input type="checkbox" name="seecar" id="seecar" class="seeradio" value="invcar">자동차</li>
-          <li><input type="checkbox" name="seeadress" id="seeadress" class="seeradio" value="invadress">주소록</li>
+          <li>
+            <input type="checkbox" name="seealram" id="seealram" class="seeradio" value="invalram">
+            <label for="seealram">알림</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seemovie" id="seemovie" class="seeradio" value="invmovie">
+            <label for="seemovie">영화</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seeaudioclip" id="seeaudioclip" class="seeradio" value="invaudioclip">
+            <label for="seeaudioclip">오디오클립</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seeoffice" id="seeoffice" class="seeradio" value="invoffice">
+            <label for="seeoffice">오피스</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seewebfiction" id="seewebfiction" class="seeradio" value="invwebfiction">
+            <label for="seewebfiction">웹소설</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seecar" id="seecar" class="seeradio" value="invcar">
+            <label for="seecar">자동차</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seeadress" id="seeadress" class="seeradio" value="invadress">
+            <label for="seeadress">주소록</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seestock" id="seestock" class="seeradio" value="invstock">
+            <label for="seestock">증권(금융)</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seemap" id="seemap" class="seeradio" value="invmap">
+            <label for="seemap">지도</label>
+          </li>
+          <li>
+            <input type="checkbox" name="seeinfodic" id="seeinfodic" class="seeradio" value="invinfodic">
+            <label for="seeinfodic">지식백과</label>
+          </li>
         </ul>
       </div>
     </div>
